# editor

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ru.md  README_zh.md  Readme_ru.md  Trunk.toml  appimage.sh  generate_icons.sh  index.html
.github/workflows/: gh-pages.yml  rust.yml
assets/: manifest.json  sw.js
docs/: about_en.md  about_ru.md
examples/: full_adder.json
src/: component_lib.rs  components_panel.rs  field.rs  file_managment.rs  helpers.rs  interaction_manager.rs  locale.rs  main.rs  preview.rs  preview_window.rs  primitives.rs  settings.rs
src/grid_db/: components.rs  graphics.rs  grid_db.rs  mod.rs  net.rs  primitives.rs  text_field.rs
