[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
rfd = "0.15.3"
lyon = "1.0.1"
egui_commonmark = { version = "0.21", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0.2"
sys-locale = "0.3.2"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
overflow-checks = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["Window", "Document", "HtmlElement", "HtmlAnchorElement", "Url", "Blob"] }
js-sys = "0.3.77"

[profile.dev.package."*"]
opt-level = "z"
