[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[features]
unifont = []

[dependencies]
eframe = { version = "0.32.0", features = ["persistence"] }
egui = "0.32.0"
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
rfd = "0.15.3"
lyon = "1.0.1"
egui_commonmark = { version = "0.21.1" }
web-time = "1.1.0"
image = { version = "0.25.6", features = ["jpeg"] }
include_dir = "0.7.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0.2"
sys-locale = "0.3.2"
egui_extras = { version = "0.32.0", features = ["svg", "svg_text"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["Window", "Document", "HtmlElement", "HtmlAnchorElement", "Url", "Blob"] }
js-sys = "0.3.77"
egui_extras = "0.32.0"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
overflow-checks = false

[profile.dev.package."*"]
opt-level = "z"
